# NeoStore

./: .gitignore  activate.bat  deactivate.bat  execute.bat  pyproject.toml  requirements.txt
src/: __init__.py
src/models/: local_db.py  schemas.py
src/routers/: router.py
