[project]
name = "neostore"
version = "0.1.0"
description = "A tech store management system's backend service app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
]
